# wanhao-d12-230-cli-monitor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
printer_monitor/: __init__.py  __main__.py  cli.py  dashboard.py  parsers.py  serial_conn.py  server.py  state.py
tests/: test_parsers.py
